--- a/templates/vanilla/index.html
+++ b/templates/vanilla/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Oasis App</title>
 	</head>
-	<body>
+	<body style="margin: 0; padding: 0">
 		<canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
 		<script type="module" src="/main.js"></script>
 	</body>
