--- a/templates/vue/index.html
+++ b/templates/vue/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
