--- a/templates/vue/index.html
+++ b/templates/vue/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Oasis Engine</title>
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0; overflow: hidden;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
