--- a/templates/vanilla/index.html
+++ b/templates/vanilla/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Oasis App</title>
+		<title>Galacean App</title>
 	</head>
 	<body style="margin: 0; padding: 0">
 		<canvas id="canvas" style="width: 100vw; height: 100vh"></canvas>
